fix icons and search bar align

--- a/dev/scss/_header.scss
+++ b/dev/scss/_header.scss
@@ -47,6 +47,7 @@ header{
 
         &>div{
             @include flex-row();
+            align-items: center;
         }
     }
     
